# saga

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile
docs/: DESIGN.md
inverted-index/: Cargo.toml
inverted-index/src/: .rustfmt.toml  constants.rs  document.rs  index.rs  lib.rs  manager.rs  shard.rs  store.rs
inverted-index/src/stores/: mod.rs
inverted-index/src/stores/sqlite/: mod.rs  queries.rs
main/: Cargo.toml  Makefile
main/src/: main.rs
rpc/: Cargo.toml
rpc/src/: db.rs  lib.rs  messages.rs  node.rs
scripts/: launch_data.sh  launch_metadata.sh  test_metadata_data.sh
src/: cli.yml  cluster.rs  main.rs
src/rpc/: db.rs  messages.rs  mod.rs  node.rs
ui/: Cargo.toml  Makefile  api.js  elm-package.json  package-lock.json  package.json
ui/src/: Main.elm  Models.elm  Msgs.elm  index.html  index.js  layout.rs  main.rs
ui/src/Indices/: List.elm
ui/static/: index.html
web/: Cargo.toml  Makefile
web/src/: lib.rs
web/src/handlers/: cluster.rs  constants.rs  health.rs  indices.rs  mod.rs
web/src/router/: mod.rs
