[package]
name = "main"
version = "0.1.0"
authors = ["Fletcher Haynes <fletcher@unity3d.com>"]

[dependencies]
hyper = "0.11"
futures = "0.1.17"
uuid = { version = "0.5", features = ["v4", "serde"] }
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.8"
clap = { version = "2.29", features = ["yaml"] }
rusqlite = "0.13.0"

inverted_index = { path = "./inverted-index/" }
web = { path = "./web/" }
rpc = { path = "./rpc/" }

