[package]
name = "saga"
version = "0.1.0"
authors = ["Fletcher Haynes <fletcher@subnetzero.io>"]

[dependencies]
hyper = "0.11.0"
futures = "0.1.24"
uuid = { version = "0.6", features = ["v4", "serde"] }
serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.27"
clap = { version = "2.32", features = ["yaml"] }
rusqlite = "0.14.0"

inverted_index = { path = "./inverted-index/" }
web = { path = "./web/" }
rpc = { path = "./rpc/" }
